build_log_2.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:81: error: cannot find symbol
                    if (child != binding.chipJaneDoe && child != binding.chipMikeKalema && child != binding.addGuarantorChip) {
                                                                                                           ^
  symbol:   variable addGuarantorChip
  location: variable binding of type FragmentLoanApplicationBinding
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:268: error: cannot find symbol
        int addIndex = binding.chipsContainer.indexOfChild(binding.addGuarantorChip);
                                                                  ^
  symbol:   variable addGuarantorChip
  location: variable binding of type FragmentLoanApplicationBinding
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///home/darlin-pafra/AndroidStudioProjects/Save/Front-end/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:81: error: cannot find symbol
                      if (child != binding.chipJaneDoe && child != binding.chipMikeKalema && child != binding.addGuarantorChip) {
                                                                                                             ^
    symbol:   variable addGuarantorChip
    location: variable binding of type FragmentLoanApplicationBinding
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:268: error: cannot find symbol
          int addIndex = binding.chipsContainer.indexOfChild(binding.addGuarantorChip);
                                                                    ^
    symbol:   variable addGuarantorChip
    location: variable binding of type FragmentLoanApplicationBinding
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 12s
19 actionable tasks: 1 executed, 18 up-to-date
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:81: error: cannot find symbol
                    if (child != binding.chipJaneDoe && child != binding.chipMikeKalema && child != binding.addGuarantorChip) {
                                                                                                           ^
  symbol:   variable addGuarantorChip
  location: variable binding of type FragmentLoanApplicationBinding
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:268: error: cannot find symbol
        int addIndex = binding.chipsContainer.indexOfChild(binding.addGuarantorChip);
                                                                  ^
  symbol:   variable addGuarantorChip
  location: variable binding of type FragmentLoanApplicationBinding
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///home/darlin-pafra/AndroidStudioProjects/Save/Front-end/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:81: error: cannot find symbol
                      if (child != binding.chipJaneDoe && child != binding.chipMikeKalema && child != binding.addGuarantorChip) {
                                                                                                             ^
    symbol:   variable addGuarantorChip
    location: variable binding of type FragmentLoanApplicationBinding
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/LoanApplicationFragment.java:268: error: cannot find symbol
          int addIndex = binding.chipsContainer.indexOfChild(binding.addGuarantorChip);
                                                                    ^
    symbol:   variable addGuarantorChip
    location: variable binding of type FragmentLoanApplicationBinding
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 11s
19 actionable tasks: 1 executed, 18 up-to-date
